--- a/_css/agendamento.css
+++ b/_css/agendamento.css
@@ -4,7 +4,10 @@
 body{
     min-width: 700px;
 }
-
+#descricao{
+    margin-bottom: 50px;
+    font-size: 28px;
+}
 section{
     height: 30%;
     margin: 150px;
