--- a/_css/agendamento.css
+++ b/_css/agendamento.css
@@ -21,7 +21,21 @@ section{
 #nome{
     margin: 0px 0px 5px 5px ;
 }
+
+#telefone{
+  margin: 0px 0px 5px 22px ;
+
+}
+#email{
+  margin: 0px 0px 5px 2px ;
+}
+
+#rua,#quadra,#numero{
+  margin: 20px 0px 5px 5px ;
+
+}
+
 #butao{
-    margin: 20px 5px 5px 65px;
+    margin: 20px 5px 5px 70px;
     position: relative;
 }
